tests/ui/ferrocene/compiler-arguments/extern/extern_non-existing.stderr
error: extern location for some_crate does not exist: non_existing
  --> $DIR/extern_non-existing.rs:7:7
   |
LL |     ::some_crate::hello();
   |       ^^^^^^^^^^

error: aborting due to 1 previous error

